tests/paczka1/small_fuzzy/22746606.err
Error in line 2: rHZVyjOaf A762 93,9
Error in line 10: rHZVyjOaf S666 75,8
Error in line 9: S666 S666 32,2
